# rust-web-app

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bak  README.md  docker-compose.yaml
.github/workflows/: build.yml
caddy/: Caddyfile
src/: main.rs
templates/: about.html  dvd.html  health.html  hello.html  index.html
terraform/: .terraform.lock.hcl  main.tf  main.tfvars  providers.tf
