[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"

[profile.release]
incremental = true

[dependencies]
askama = ">=0.11"
axum = ">=0.4.8"
axum-extra = "0.7.2"
tokio = { version = ">=1.17.0", features = ["full"] }
tower = ">=0.4.12"
tower-http =  { version = ">=0.4.0", features = ["full"] }
